<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.intelligentmobiledesign.betterapp.CreateNewJoke"
    tools:showIn="@layout/activity_create_new_joke">

    <TextView
        android:id="@+id/new_joke_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="@string/new_joke" />

    <TextView
        android:id="@+id/new_title_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/knock" />

    <TextView
        android:id="@+id/new_title_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/whos_there" />

    <EditText
        android:id="@+id/new_part_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/new_joke"
        />

     <Button android:id="@+id/part_one_button"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:text="@string/enter"
         android:onClick="submitOne"
         />

    <TextView android:id="@+id/new_blank_who"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        />

    <EditText
        android:id="@+id/new_part_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/new_joke" />

    <Button android:id="@+id/part_two_button"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/enter"
        android:onClick="submitTwo"
        />

</LinearLayout>

