<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.intelligentmobiledesign.betterapp.MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView android:id="@+id/knock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/knock"
            android:textSize="35sp"
            />
        <Button android:id="@+id/whos_there"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/whos_there"
            android:onClick="whosThere"
            />
        <TextView android:id="@+id/firstHalf"
            android:layout_width="match_parent"
            android:textSize="35sp"
            android:layout_height="wrap_content" />

        <Button android:id="@+id/blank_who"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:onClick="blankWho"
            />

        <TextView android:id="@+id/secondHalf"
            android:layout_width="match_parent"
            android:textSize="35sp"
            android:layout_height="wrap_content" />
        <Button android:id="@+id/refresh"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textSize="20sp"
            android:text="@string/refresh_button"
            android:onClick="refreshButton"

            />
    </LinearLayout>
</RelativeLayout>
